
<resources>

    <string name="app_name" translatable="false">TaskTimer</string>
    <string name="group" translatable="false">Kotlin Knights</string>
    <string name="username_hint" translatable="false">Username</string>
    <string name="password_hint" translatable="false">Password</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="confPassword_hint" translatable="false">Confirm Password</string>
    <string name="loginBtn">Sign in</string>
    <string name="signupBtn">Sign up</string>
    <string name="guestBtn">register as a guest</string>
    <string name="totalTimeText">Total Time :</string>
    <string name="taskTitle">Title</string>
    <string name="taskTitle_hint">Write your task title here</string>
    <string name="taskDetail">Detail</string>
    <string name="taskDetail_hint">Write your details here</string>
    <string name="addTaskBtn">Add Task</string>
    <string name="defualtTimer">00:00:00</string>
    <string name="addUserS">User Added Successfully</string>
    <string name="addTaskS">The task added successfully</string>
    <string name="Signin">Sign in</string>
    <string name="membeEr">Already a member?</string>
    <string name="member">Not a member?</string>
    <string name="NewTask">New Task</string>
    <string name="loginWrnning">Please enter a correct password and user name</string>
    <string name="fillWarnning">please fill all field</string>
    <string name="emailCon">"The email must follow the pattern example@organization.extention"</string>
    <string name="deleteConf">Are you  sure you want to delete this task?</string>
    <string name="deleted">The task deleted successfully</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="Hello">Hello,</string>
    <string name="name">Name of the user</string>
    <string name="userName">user name</string>
    <string name="wrong">Something Wrong!</string>
    <string name="deleteAccT">Delete Account</string>
    <string name="deleteAcc">Are you sure You want to delete your account!</string>
    <string name="languChose">Choose your Language</string>
    <string name="FullName">Full Name</string>
    <string name="notFoundUser">The user doesn\'t found!</string>
    <string name="fillRequir">Please Enter the required data!</string>


</resources>