<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/topLay"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textSize="40dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottomLay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="40dp"
        android:background="@drawable/frame_style1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLay">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardElevation="15dp"
            app:cardCornerRadius="10dp"
            >
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:inputType="textPersonName"
                android:hint="@string/username_hint" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardElevation="15dp"
            app:cardCornerRadius="10dp"
            >
            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:inputType="textPersonName"
                android:hint="@string/email_hint" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardElevation="15dp"
            app:cardCornerRadius="10dp"
            >
            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:inputType="textPersonName"
                android:hint="@string/password_hint" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardElevation="15dp"
            app:cardCornerRadius="10dp"
            >
            <EditText
                android:id="@+id/confirmET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:inputType="textPersonName"
                android:hint="@string/confPassword_hint" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardElevation="15dp"
            app:cardCornerRadius="10dp"
            >
            <Button
                android:id="@+id/signUpBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="68dp"
                android:text="@string/signupBtn" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>